# BambuPrinterLAN-Edge

./: .gitattributes  .gitignore  LICENSE  NOTICE  README.md  build-signed-apk.bat  build-signed-apk.sh  settings.gradle.kts
.claude/skills/run-bambuprinterlan/: SKILL.md  driver.ps1
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/bambuprinterlan/app/: AmsMappingStore.kt  AssistantViewModel.kt  AutoFixViewModel.kt  BatchViewModel.kt  CommandBus.kt  DeviceViewModel.kt  EventNotifier.kt  FeatureCatalog.kt  FilamentProfiles.kt  MainActivity.kt  Mesh3mf.kt  MeshLoader.kt  ModelArranger.kt  ModelEditStore.kt  PrepareViewModel.kt  PrintActionReceiver.kt  PrintHistoryStore.kt  PrintMonitorService.kt  QrScan.kt  SettingsViewModel.kt  SliceStore.kt  WorkspaceStore.kt
app/src/main/kotlin/com/bambuprinterlan/app/nav/: Destinations.kt
app/src/main/kotlin/com/bambuprinterlan/app/ui/: AssistantScreen.kt  (+17 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
core/data/: build.gradle.kts
core/design/: build.gradle.kts
core/model/: build.gradle.kts  consumer-rules.pro
engine/jni/: build.gradle.kts
engine/jni/src/main/cpp/: CMakeLists.txt  native-lib.cpp
gradle/: libs.versions.toml
net/bambu/: build.gradle.kts  consumer-rules.pro
relay/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
relay/app/: __init__.py  bambu_client.py  config.py  main.py
(+21 files in other folders)
